--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,4 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/templatefield
 commands = python runtests.py
 deps =
-    -r{toxinidir}/requirements-test.txt
+    -r{toxinidir}/requirements/test.txt
