--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,22 @@
 language: python
 
 python:
+  - "3.5"
   - "3.4"
   - "3.3"
   - "2.7"
+  - "pypy"
 
 before_install:
   - pip install codecov
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements/test.txt
+install:
+  - pip install -r requirements/test.txt
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "3.3" ]]; then pip install -U "django<1.9"; fi
 
 # command to run tests using coverage, e.g. python setup.py test
-script: coverage run --source templatefield runtests.py
+script: coverage run --branch --source templatefield runtests.py
 
 after_success:
   - codecov
